--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 sudo: required
 
+env:
+  global:
+    - PROJECT_NAME=tekwrks
+    - DOCKER_IMAGE_NAME=user
+
 language: node_js
 node_js:
   - '10'
+
+# Cache Gcloud SDK between commands
+cache:
+  directories:
+    - "$HOME/google-cloud-sdk/"
 
 install:
   - npm install -g codecov
@@ -17,6 +27,20 @@ before_script:
 
 script:
   - make build
+
+before_deploy:
+  - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash >/dev/null; fi
+  - source /home/travis/google-cloud-sdk/path.bash.inc
+  - gcloud --quiet version
+  - gcloud --quiet components update
+  - git clone https://github.com/tekwrks/MANAGE
+
+deploy:
+  - provider: script
+    script: chmod 500 ./MANAGE/gcloud/push.sh && ./MANAGE/gcloud/push.sh
+    skip_cleanup: true
+    on:
+      branch: master
 
 notifications:
   slack:
